--- a/validate_config.yml
+++ b/validate_config.yml
@@ -2,11 +2,11 @@ model:
   name: "ConvLSTM"
   params:
     history_steps: 5
-    example_parameter: 1
 validation:
   data_path: "/bask/projects/v/vjgo8416-climate/shared/data/eumetsat/testing2022/2022_test_nonhrv.zarr"
   wandb_project_name: "cloudcasting"
-  wandb_run_name: "ConvLSTM-validation"
-  nan_to_num: False
-  batch_size: 2
-  num_workers: 0
+  wandb_run_name: "ConvLSTM-validation_50_batchlimit"
+  nan_to_num: True
+  batch_size: 16
+  num_workers: 36
+  batch_limit: 50
