--- a/validate_config.yml
+++ b/validate_config.yml
@@ -2,6 +2,7 @@ model:
   name: "ConvLSTM"
   params:
     history_steps: 5
+    state_dict_path: "/bask/projects/v/vjgo8416-climate/shared/cloudcasting-validation/ocf-convLSTM/src/ocf_convLSTM/conv-lstm1-SD.pt"
 validation:
   data_path: "/bask/projects/v/vjgo8416-climate/shared/data/eumetsat/testing2022/2022_test_nonhrv.zarr"
   wandb_project_name: "cloudcasting"
