--- a/validate_config.yml
+++ b/validate_config.yml
@@ -6,8 +6,8 @@ model:
 validation:
   data_path: "/bask/projects/v/vjgo8416-climate/shared/data/eumetsat/testing2022/2022_test_nonhrv.zarr"
   wandb_project_name: "cloudcasting"
-  wandb_run_name: "ConvLSTM-validation_50_batchlimit"
+  wandb_run_name: "ConvLSTM-validation"
   nan_to_num: True
   batch_size: 16
   num_workers: 0
-  batch_limit: 50
+  
